@@ -149,7 +149,6 @@ public:
 					//   means 'terrain-editing' mode.
 	bool paint_eggs;
 	bool armageddon;		// Spell was cast.
-	int combat_difficulty;		// 0=normal, >0 harder, <0 easier.
 	int debug;
 	/*
 	 *	Class maintenance:
