@@ -1,3 +1,8 @@
+2002-11-23  Jeff Freedman  <jeff@amy.nerble.net>
+
+	* combat.h (public): Combat class with options.
+	* actors.cc:  Optionally show hits on screen.
+
 2002-11-22  Jeff Freedman  <jeff@amy.nerble.net>
 
 	* gamewin.cc (Game_window): Don't show new screen res. if in gump mode.
